// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lint > directory containing no source maps 1`] = `
{
  "messages": [],
  "sourceMaps": [],
}
`;

exports[`lint > map which does not match the source map schema 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/invalid-shape/greeter.js.map",
      "message": "map.mappings: "mappings" must be a VLQ (variable length quantity) encoded string of mappings",
      "severity": 2,
    },
    {
      "filePath": "test/fixtures/invalid-shape/greeter.js.map",
      "message": "map.sources.0: Each source must be a path or null",
      "severity": 2,
    },
    {
      "filePath": "test/fixtures/invalid-shape/greeter.js.map",
      "message": "map.version: Source map version must be 3",
      "severity": 2,
    },
  ],
  "sourceMaps": [
    "test/fixtures/invalid-shape/greeter.js.map",
  ],
}
`;

exports[`lint > map which is not valid JSON 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/malformed-json/greeter.js.map",
      "message": "Failed to read source map: Unexpected end of JSON input",
      "severity": 2,
    },
  ],
  "sourceMaps": [
    "test/fixtures/malformed-json/greeter.js.map",
  ],
}
`;

exports[`lint > map with an invalid ignore list 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/invalid-ignore-list/greeter.js.map",
      "message": ""ignoreList[1]" is 4, which is not an index into "sources"",
      "severity": 2,
    },
    {
      "filePath": "test/fixtures/invalid-ignore-list/greeter.js.map",
      "message": ""ignoreList[2]" must be an integer, but is 1.5",
      "severity": 2,
    },
    {
      "filePath": "test/fixtures/invalid-ignore-list/greeter.js.map",
      "message": ""ignoreList[3]" is -1, which is not an index into "sources"",
      "severity": 2,
    },
  ],
  "sourceMaps": [
    "test/fixtures/invalid-ignore-list/greeter.js.map",
  ],
}
`;

exports[`lint > map with an unresolved source path 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/unresolved-source/dist/greeter.js.map",
      "message": ""sources[0]" contained the path "../src/greeter.ts" which could not be found",
      "severity": 1,
    },
  ],
  "sourceMaps": [
    "test/fixtures/unresolved-source/dist/greeter.js.map",
  ],
}
`;

exports[`lint > map with mappings referencing sources and names which do not exist 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/out-of-range-mappings/greeter.js.map",
      "message": ""mappings" has a segment at line 1, column 0 referencing "names[2]", which does not exist",
      "severity": 2,
    },
    {
      "filePath": "test/fixtures/out-of-range-mappings/greeter.js.map",
      "message": ""mappings" has a segment at line 1, column 0 referencing "sources[3]", which does not exist",
      "severity": 2,
    },
  ],
  "sourceMaps": [
    "test/fixtures/out-of-range-mappings/greeter.js.map",
  ],
}
`;

exports[`lint > map with mappings which are not base64 VLQ 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/invalid-mappings/greeter.js.map",
      "message": ""mappings" contains " " at offset 5, which is not valid base64 VLQ",
      "severity": 2,
    },
  ],
  "sourceMaps": [
    "test/fixtures/invalid-mappings/greeter.js.map",
  ],
}
`;

exports[`lint > path which does not exist 1`] = `
{
  "messages": [
    {
      "message": "Failed to read "test/fixtures/does-not-exist": ENOENT: no such file or directory, stat 'test/fixtures/does-not-exist'",
      "severity": 2,
    },
  ],
  "sourceMaps": [],
}
`;

exports[`lint > project with inline source maps enabled in tsconfig 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/tsconfig-inline-source-maps/tsconfig.json",
      "message": "Source maps are enabled but TypeScript does not minify its output, so it should already be readable without them. Consider disabling source maps",
      "severity": 1,
    },
  ],
  "sourceMaps": [
    "test/fixtures/tsconfig-inline-source-maps/dist/greeter.js.map",
  ],
}
`;

exports[`lint > project with no build config 1`] = `
{
  "messages": [],
  "sourceMaps": [
    "test/fixtures/valid-inline-sources/dist/greeter.js.map",
  ],
}
`;

exports[`lint > project with source maps and minification 1`] = `
{
  "messages": [],
  "sourceMaps": [
    "test/fixtures/tsdown-minified/dist/greeter.js.map",
  ],
}
`;

exports[`lint > project with source maps but no minification 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/tsdown-unnecessary-source-maps/tsdown.config.ts",
      "message": "Source maps are enabled but minification is not, so the output should already be readable without them. Consider disabling source maps",
      "severity": 1,
    },
  ],
  "sourceMaps": [
    "test/fixtures/tsdown-unnecessary-source-maps/dist/greeter.js.map",
  ],
}
`;

exports[`lint > project with source maps disabled 1`] = `
{
  "messages": [],
  "sourceMaps": [
    "test/fixtures/tsdown-source-maps-disabled/dist/greeter.js.map",
  ],
}
`;

exports[`lint > project with source maps disabled in tsconfig 1`] = `
{
  "messages": [],
  "sourceMaps": [
    "test/fixtures/tsconfig-source-maps-disabled/dist/greeter.js.map",
  ],
}
`;

exports[`lint > project with source maps enabled in tsconfig 1`] = `
{
  "messages": [
    {
      "filePath": "test/fixtures/tsconfig-source-maps/tsconfig.json",
      "message": "Source maps are enabled but TypeScript does not minify its output, so it should already be readable without them. Consider disabling source maps",
      "severity": 1,
    },
  ],
  "sourceMaps": [
    "test/fixtures/tsconfig-source-maps/dist/greeter.js.map",
  ],
}
`;

exports[`lint > single source map file 1`] = `
{
  "messages": [],
  "sourceMaps": [
    "test/fixtures/valid-external-sources/dist/greeter.js.map",
  ],
}
`;

exports[`lint > valid map with external sources 1`] = `
{
  "messages": [],
  "sourceMaps": [
    "test/fixtures/valid-external-sources/dist/greeter.js.map",
  ],
}
`;

exports[`lint > valid map with inline sources 1`] = `
{
  "messages": [],
  "sourceMaps": [
    "test/fixtures/valid-inline-sources/dist/greeter.js.map",
  ],
}
`;
